Finished alphas for TrackCam scripts

--- a/devices/Track_Cam/Track_Cam.ini
+++ b/devices/Track_Cam/Track_Cam.ini
@@ -18,72 +18,79 @@ end_command:   tmux kill-ses -t Track_Cam
 
 [Shm_Info]
 # for each of the following, the first element is the path to the shared 
-#   memory, the second is the data type in the shared memory
+#   memory, the second is the data type in the shared memory,
+#   the third is whether this shm should be mmapped
 
 # Shared memory to store the current state of the Tracking Camera
 #
 # information is communicated in bits:
-#   bit 0: script status (1 = on, 0 = off)
-#   bit 1: camera status (1 = on and read, 0 = off or starting up)
-#   bit 2: fan status    (1 = on auto, 0 = off)
-#   bit 3: LED status    (1 = on, 0 = off)
-Stat_D: /tmp/Track_Cam/DSTAT.im.shm,uint8
+#   bit 0 (LSB): script status (1 = on, 0 = off)
+#   bit 1      : camera status (1 = on and ready, 0 = off or starting up)
+#   bit 2      : fan status    (1 = on auto, 0 = off)
+#   bit 3      : LED status    (1 = on, 0 = off)
+Stat_D: /tmp/Track_Cam/DSTAT.shm,uint8
 
 # Shared memory to store any errors
-Error:  /tmp/Track_Cam/ERROR.im.shm,uint8
+#
+# Error codes:
+#   
+Error:  /tmp/Track_Cam/ERROR.shm,uint8
 
 # Shared memory to store the CRED2 image (max size is 640X512)
 IMG:    /tmp/Track_Cam/IMG.im.shm,uint16
 
 # Shared memory to store the current cropping window of the CRED2
 #
-# order is left bound, right bound, upper bound, lower bound
-#   -1, -1, -1, -1 means subwindowing is off
-Crop_D: /tmp/Track_Cam/DCROP.im.shm,uint16
+# order is left bound (col 1), right bound (col 2), 
+#   upper bound (row 1), lower bound (row 2)
+#   0, 0, 0, 0 means subwindowing is off
+Crop_D: /tmp/Track_Cam/DCROP.shm,uint16
 
 # Shared memory to store the current number of non-destructive reads
 #
 # 0 means that NDR mode is off
-NDR_D:  /tmp/Track_Cam/DNDR.im.shm,uint8
+NDR_D:  /tmp/Track_Cam/DNDR.shm,uint8
 
 # Shared memory to store the current frames per second
-FPS_D:  /tmp/Track_Cam/DFPS.im.shm,double
+FPS_D:  /tmp/Track_Cam/DFPS.shm,double
 
 # Shared memory to store the current exposure time
-Exp_D:  /tmp/Track_Cam/DEXP.im.shm,double
+Exp_D:  /tmp/Track_Cam/DEXP.shm,double
 
 # Shared memory to store all temperatures of the camera
 #
 # Order is: mother board, front end, power board, sensor, peltier, heatsink
-Temp_D: /tmp/Track_Cam/DTEMP.im.shm,double
+Temp_D: /tmp/Track_Cam/DTEMP.shm,double
 
 # Shared memory to store the target state of the Tracking Camera
 #
 # information is communicated in bits as in Stat_D
-Stat_P: /tmp/Track_Cam/PSTAT.im.shm,uint8
+Stat_P: /tmp/Track_Cam/PSTAT.shm,uint8
 
 # Shared memory to store the target cropping window of the CRED2
 #
 # Order is as Crop_D. Maximum window is 0, 640, 0, 512. 
 #   Any window that doesn't make sense will be ignored. 
-#   If -1, -1, -1, -1 is sent, subwindowing will be turned off
-Crop_P: /tmp/Track_Cam/PCROP.im.shm,uint16
+#   If 0, 0, 0, 0, subwindowing will be turned off
+Crop_P: /tmp/Track_Cam/PCROP.shm,uint16
 
 # Shared memory to store the target number of non-destructive reads
 #
 # Sending 0 will turn NDR mode off
-NDR_P:  /tmp/Track_Cam/PNDR.im.shm,uint8
+NDR_P:  /tmp/Track_Cam/PNDR.shm,uint8
 
 # Shared memory to store the target frames per second
-FPS_P:  /tmp/Track_Cam/PFPS.im.shm,double
+#
+# Non-Positive values will be ignored
+FPS_P:  /tmp/Track_Cam/PFPS.shm,double
 
 # Shared memory to store the target exposure time
 #
 # An exposure of greater than 1/fps will be ignored. 
-Exp_P:  /tmp/Track_Cam/PEXP.im.shm,double
+Exp_P:  /tmp/Track_Cam/PEXP.shm,double
 
 # Shared memory to store the target temperature of the snake, as well as the
 #   rate at which Temp_D is updated.
 #
 # Order is: target temp, update rate (s)
-Temp_P: /tmp/Track_Cam/PTEMP.im.shm,double
+Temp_P: /tmp/Track_Cam/PTEMP.shm,double
