--- a/devices/NPS/NPS.ini
+++ b/devices/NPS/NPS.ini
@@ -25,7 +25,7 @@ end_command:   tmux kill-ses -t NPS
 #   the third is whether this shared memory should be mmapped 
 #       NOTE: (mmapping makes get and set faster but takes up extra mem)
 
-# bit number cooresponds to port (port 8 is the LSB)
+# bit number coorresponds to port (port 1 is the LSB)
 #   0 is off, 1 is on
 
 P_Shm: /tmp/NPS/PORTSP.shm,uint8,0
