--- a/devices/FIU_TTM/FIU_TTM.ini
+++ b/devices/FIU_TTM/FIU_TTM.ini
@@ -12,7 +12,7 @@ debug_log:  /nfiudata/LOGS/FIU_TTM.log
 [Environment]
 # Command to start control script
 # to use with Popen: split by "|" and then split beginning by " "
-start_command: tmux new -d -s FIU_TTM|FIU_TTM_Control
+start_command: tmux new -d -s FIU_TTM|tmux send-keys -t FIU_TTM "FIU_TTM_Control" Enter
 # Command to end control script
 end_command:   tmux kill-ses -t FIU_TTM
 
@@ -28,42 +28,31 @@ max_2: 10000.
 
 [Shm_Info]
 # for each of the following, the first element is the path to the shared 
-#   memory and the second is the (numpy) data type in the shared memory
+#   memory, the second is the (numpy) data type in the shared memory,
+#   the third is whether the shm should be mmapped
 #
 # The directory path below is made in FIU_TTM_Control, so change that file if
 #   changing location of shms.
 
-# NOTE: float16 might work, need to check precision of encoder
 # Shared memory to store the current positiom
-Pos_D:  /tmp/FIU_TTM/POSD.im.shm,float32
-# NOTE: float16 might work, need to check precision of encoder
+Pos_D:  /tmp/FIU_TTM/POSD.im.shm,float32,1
 # Shared memory to store the target position
-Pos_P:  /tmp/FIU_TTM/POSP.im.shm,float32
+Pos_P:  /tmp/FIU_TTM/POSP.im.shm,float32,1
 # Shared memory to store the current status
-Stat_D: /tmp/FIU_TTM/STATUSD.im.shm,int8
+#
+# Status is stored in bits
+#   bit 0 (LSB): script status  (0 = off, 1 = on)
+#   bit 1      : devices status (0 = not connected, 1 = on and connected)
+#   bit 2      : device moving  (0 = stationary, 1 = moving)
+#   bit 3      : close loop     (0 = loop open, 1 = loop closed)
+Stat_D: /tmp/FIU_TTM/STATUSD.im.shm,int8,0
 # Shared memory to store the target status
-Stat_P: /tmp/FIU_TTM/STATUSP.im.shm,int8
+#
+# Status bits same as in Stat_D
+Stat_P: /tmp/FIU_TTM/STATUSP.im.shm,int8,0
 # Shared memory to store any error that arises
-Error:  /tmp/FIU_TTM/ERROR.im.shm,uint8
-# Shared memory to store the target servo state
-#  (can also assume this is the current servo state)
-Svos:   /tmp/FIU_TTM/SVOS.im.shm,int8
-
-# To get the size of a shared memory, look here and split by ","
-[Shm_Init]
-# pos, pos
-# Nonsense values that will be overwritten
-Pos_D:  -5000.,-5000.
-# pos, pos
-# The center of the TTM's range
-Pos_P:  5000.,5000.
-# 2 = moving // 1 = all (stage & script) on // 0 = stage off
-#    -1 = script dead // -2 = all off 
-# NOTE: a starting value of 2 is picked to force the control script to update
-Stat_D: 2
-# 1 = device on // 0 = device off
-Stat_P: 1
-# 0 = None // 1 = MovementRange // 2 = LoopOpen // 3 = StageOff
-Error:  0
-# whether the servo is on
-Svos:   1,1
+#
+# Error codes:
+#   0 = no error // 1 = MovementRange // 2 = LoopOpen //
+#   3 = StageOff
+Error:  /tmp/FIU_TTM/ERROR.im.shm,uint8,0
