Update FIU_TTM to new Shm structure

--- a/devices/FIU_TTM/FIU_TTM.ini
+++ b/devices/FIU_TTM/FIU_TTM.ini
@@ -16,6 +16,10 @@ start_command: tmux new -d -s FIU_TTM|tmux send-keys -t FIU_TTM "FIU_TTM_Control
 # Command to end control script
 end_command:   tmux kill-ses -t FIU_TTM
 
+[Presets]
+center: 5000.,5000.
+corner: 0.,0.
+
 [TTM_Limits]
 # Axis 1 lower limit
 min_1: 0.
@@ -45,11 +49,11 @@ Pos_P:  /tmp/FIU_TTM/POSP.im.shm,float32,1
 #   bit 1      : devices status (0 = not connected, 1 = on and connected)
 #   bit 2      : device moving  (0 = stationary, 1 = moving)
 #   bit 3      : close loop     (0 = loop open, 1 = loop closed)
-Stat_D: /tmp/FIU_TTM/STATUSD.im.shm,int8,0
+Stat_D: /tmp/FIU_TTM/STATUSD.im.shm,uint8,0
 # Shared memory to store the target status
 #
 # Status bits same as in Stat_D
-Stat_P: /tmp/FIU_TTM/STATUSP.im.shm,int8,0
+Stat_P: /tmp/FIU_TTM/STATUSP.im.shm,uint8,0
 # Shared memory to store any error that arises
 #
 # Error codes:
