Update to TrackCam, compiling minus FLI

--- a/devices/NPS/NPS.ini
+++ b/devices/NPS/NPS.ini
@@ -40,7 +40,7 @@ D_Shm: /tmp/NPS/PORTSD.shm,uint8,0
 2: TC mode stage,Conex controller for display mode
 3: FEU CF source,mid-IR light source
 4: FIU CF source,1550 nm laser
-5: Not connected,Temporary FEU
-6: Not connected,Labjack + 2 photodiodes
+5: CL to fiber,Cameralink-fiber converters
+6: CL cable,10-m Cameralink cables
 7: Env. sensors,Environmental monitoring
 8: FIU TTM,E-727 Tip Tilt mirror controller
