Finished testing new FIU TTM on nfiuserver

--- a/devices/FIU_TTM/FIU_TTM.ini
+++ b/devices/FIU_TTM/FIU_TTM.ini
@@ -39,9 +39,9 @@ max_2: 10000.
 #   changing location of shms.
 
 # Shared memory to store the current positiom
-Pos_D:  /tmp/FIU_TTM/POSD.im.shm,float32,1
+Pos_D:  /tmp/FIU_TTM/POSD.shm,float32,1
 # Shared memory to store the target position
-Pos_P:  /tmp/FIU_TTM/POSP.im.shm,float32,1
+Pos_P:  /tmp/FIU_TTM/POSP.shm,float32,1
 # Shared memory to store the current status
 #
 # Status is stored in bits
@@ -49,14 +49,14 @@ Pos_P:  /tmp/FIU_TTM/POSP.im.shm,float32,1
 #   bit 1      : devices status (0 = not connected, 1 = on and connected)
 #   bit 2      : device moving  (0 = stationary, 1 = moving)
 #   bit 3      : close loop     (0 = loop open, 1 = loop closed)
-Stat_D: /tmp/FIU_TTM/STATUSD.im.shm,uint8,0
+Stat_D: /tmp/FIU_TTM/STATUSD.shm,uint8,0
 # Shared memory to store the target status
 #
 # Status bits same as in Stat_D
-Stat_P: /tmp/FIU_TTM/STATUSP.im.shm,uint8,0
+Stat_P: /tmp/FIU_TTM/STATUSP.shm,uint8,0
 # Shared memory to store any error that arises
 #
 # Error codes:
 #   0 = no error // 1 = MovementRange // 2 = LoopOpen //
 #   3 = StageOff
-Error:  /tmp/FIU_TTM/ERROR.im.shm,uint8,0
+Error:  /tmp/FIU_TTM/ERROR.shm,uint8,0
