Added error codes to Track_Cam.ini comments

--- a/devices/Track_Cam/Track_Cam.ini
+++ b/devices/Track_Cam/Track_Cam.ini
@@ -33,7 +33,8 @@ Stat_D: /tmp/Track_Cam/DSTAT.shm,uint8
 # Shared memory to store any errors
 #
 # Error codes:
-#   
+#   0 = No error // 1 = Camera not ready // 2 = invalid parameter //
+#   3 = FLI error
 Error:  /tmp/Track_Cam/ERROR.shm,uint8
 
 # Shared memory to store the CRED2 image (max size is 640X512)
