Updated NPS config file

--- a/devices/NPS/NPS.ini
+++ b/devices/NPS/NPS.ini
@@ -40,7 +40,7 @@ D_Shm: /tmp/NPS/PORTSD.shm,uint8,0
 2: TC mode stage,Conex controller for display mode
 3: FEU CF source,mid-IR light source
 4: FIU CF source,1550 nm laser
-5: CL to fiber,Cameralink-fiber converters
-6: CL cable,10-m Cameralink cables
+5: FIU Metrology,FIU environment sensors
+6: Cam Cables,Track Cam cables
 7: Env. sensors,Environmental monitoring
 8: FIU TTM,E-727 Tip Tilt mirror controller
