Tested Fibre_MP

--- a/devices/Fiber_MP/Fiber_MP.ini
+++ b/devices/Fiber_MP/Fiber_MP.ini
@@ -13,7 +13,7 @@ debug_log:  /nfiudata/LOGS/Fiber_MP.log
 [Environment]
 # Command to start control script
 # to use with Popen: split by "|" and then split by " "
-start_command: tmux new -d -s Fiber_MP|tmux send-keys -t PIAA "PIAA_Control" Enter
+start_command: tmux new -d -s Fiber_MP|tmux send-keys -t Fiber_MP "Fiber_MP_Control" Enter
 # Command to end control script
 end_command:   tmux kill-ses -t Fiber_MP
 
@@ -23,9 +23,9 @@ out:  -13.
 
 [Limits]
 # lower limit
-min: -13.
+min: 0.
 # upper limit
-max: 13.
+max: 75.
 
 [Shm Info]
 # for each of the following, the first element is the path to the shared 
