FEU TTM updates to new shm

--- a/devices/FEU_TTM/FEU_TTM.ini
+++ b/devices/FEU_TTM/FEU_TTM.ini
@@ -8,10 +8,6 @@
 [Communication]
 # Default location to store TTM debug file
 debug_log:  /nfiudata/LOGS/FEU_TTM.log
-# Telnet ip to connect to
-address:    nspecterm
-# Telnet port to connect to
-port:       10007 
 
 [Environment]
 # Command to start control script
@@ -19,6 +15,10 @@ port:       10007
 start_command: tmux new -d -s FEU_TTM|FEU_TTM_Control
 # Command to end control script
 end_command:   tmux kill-ses -t FEU_TTM
+
+[Presets]
+center: 0.,0.
+corner: .75,-0.75
 
 [Limits]
 # Stage reports limits as [-.76, .76]
@@ -39,34 +39,25 @@ max_2: .75
 # The directory path below is made in FEU_TTM_Control, so change that file if
 #   changing location of shms.
 
-# NOTE: float16 might work, need to check precision of encoder
 # Shared memory to store the current positiom
 Pos_D:  /tmp/FEU_TTM/POSD.shm,float32,1
-# NOTE: float16 might work, need to check precision of encoder
 # Shared memory to store the target position
 Pos_P:  /tmp/FEU_TTM/POSP.shm,float32,1
 # Shared memory to store the current status
-Stat_D: /tmp/FEU_TTM/STATUSD.shm,int8,0
+#
+# Status is stored in bits
+#   bit 0 (LSB): script status (0 = off, 1 = on)
+#   bit 1      : device status (0 = not connected, 1 = connected)
+#   bit 2      : device moving (0 = stationary, 1 = moving)
+Stat_D: /tmp/FEU_TTM/STATUSD.shm,uint8,0
 # Shared memory to store the target status
-Stat_P: /tmp/FEU_TTM/STATUSP.shm,int8,0
+#
+# Status bits same as in Stat_D, bit 2 is ignored
+Stat_P: /tmp/FEU_TTM/STATUSP.shm,uint8,0
 # Shared memory to store any error that arises
-Error:  /tmp/FEU_TTM/ERROR.shm,int8,0
-
-# To get the size of a shared memory, look here and split by ","
-[Shm_Init]
-# pos, pos
-# Nonsense values that will be overwritten
-Pos_D:  -5000.,-5000.
-# pos, pos
-# The center of the TTM's range
-Pos_P:  -5000.,-5000.
-# 2 = moving // 1 = all (stage & script) on // 0 = stage off
-#    -1 = script dead // -2 = all off 
-Stat_D: 2
-# 1 = device on // 0 = device off
-Stat_P: 1
+#
 # 0 = None // 1 = MovementRange // 3 = StageOff //
 #    negative number: numerical representation of Conex error. To translate:
 #    convert (-1*error)+64 to ascii [e.g. chr(-1*(error+64)) in Python3] 
 #    and then check device user manual.    
-Error:  0
+Error:  /tmp/FEU_TTM/ERROR.shm,int8,0
