--- a/devices/FIU_TTM/FIU_TTM.ini
+++ b/devices/FIU_TTM/FIU_TTM.ini
@@ -46,7 +46,7 @@ Pos_P:  /tmp/FIU_TTM/POSP.shm,float32,1
 #
 # Status is stored in bits
 #   bit 0 (LSB): script status  (0 = off, 1 = on)
-#   bit 1      : devices status (0 = not connected, 1 = on and connected)
+#   bit 1      : devices status (0 = not connected, 1 = connected)
 #   bit 2      : device moving  (0 = stationary, 1 = moving)
 #   bit 3      : close loop     (0 = loop open, 1 = loop closed)
 Stat_D: /tmp/FIU_TTM/STATUSD.shm,uint8,0
