clarified device name in comments

--- a/devices/PyWFS/PyWFS.ini
+++ b/devices/PyWFS/PyWFS.ini
@@ -1,5 +1,5 @@
 #
-# KPIC FIU Conex Pyramid Wavefront Sensor stage
+# KPIC FIU Conex Pyramid Wavefront Sensor Pickoff stage
 #
 #
 # WARNING: the lack of spaces between commas is a functional choice. If spaces
