Copied the presets from the lab

--- a/devices/Coronagraph/Coronagraph.ini
+++ b/devices/Coronagraph/Coronagraph.ini
@@ -18,9 +18,9 @@ start_command: tmux new -d -s Coronagraph|tmux send-keys -t Coronagraph "Coronag
 end_command:   tmux kill-ses -t Coronagraph
 
 [Presets]
-vortex:   0.,0.
-apodizer: 0.,0.
-through:  0.,0.
+vortex:   -12.05, -4.63
+apodizer: 9.9, 3.7
+through:  9.9, -12.7
 
 [Limits]
 # x axis lower limit
