--- a/devices/PyWFS/PyWFS.ini
+++ b/devices/PyWFS/PyWFS.ini
@@ -1,5 +1,5 @@
 #
-# KPIC FIU Conex Pyramid Wavefront Sensor Pickoff stage
+# KPIC FIU Conex Pyramid Wavefront Sensor stage
 #
 #
 # WARNING: the lack of spaces between commas is a functional choice. If spaces
@@ -8,6 +8,10 @@
 [Communication]
 # Default location to store debug file
 debug_log:  /nfiudata/LOGS/PyWFS.log
+# address of the device
+devnm: /dev/ttyUSB2
+# port for the device
+baud: 921600
 
 [Environment]
 # Command to start control script
@@ -17,10 +21,10 @@ start_command: tmux new -d -s PyWFS|tmux send-keys -t PyWFS "PyWFS_Control" Ente
 end_command:   tmux kill-ses -t PyWFS
 
 [Presets]
-mir_1: 30.201
-mir_2: 76.34
-mir_3: 209.731
-mir_4: 254.18
+mir_1: 30.199
+mir_2: 76.340
+mir_3: 209.729
+mir_4: 254.177
 
 [Limits]
 # Axis 1 lower limit
