--- a/devices/TCP/TCP.ini
+++ b/devices/TCP/TCP.ini
@@ -19,8 +19,8 @@ end_command:   tmux kill-ses -t TCP
 
 [Presets]
 mir_1:   26.
-mir_2:  -26.
-mir_3:   0.
+mir_2:   0
+mir_3:  -26.
 
 [Limits]
 # lower limit
