Changed updates to be more efficient. Tested.

--- a/devices/FIU_TTM/FIU_TTM.ini
+++ b/devices/FIU_TTM/FIU_TTM.ini
@@ -58,5 +58,5 @@ Stat_P: /tmp/FIU_TTM/STATUSP.shm,uint8,0
 #
 # Error codes:
 #   0 = no error // 1 = MovementRange // 2 = LoopOpen //
-#   3 = StageOff
+#   3 = StageOff // GCS Error
 Error:  /tmp/FIU_TTM/ERROR.shm,uint8,0
