--- a/devices/Bundle/Bundle.ini
+++ b/devices/Bundle/Bundle.ini
@@ -8,28 +8,31 @@
 [Communication]
 # Default location to store Bundle debug file
 debug_log: /nfiudata/LOGS/Bundle.log
-# Telnet ip to connect to
-address:   nspecterm
-# Telnet port to connect to
-port:      10008 
 
 [Environment]
 # Command to start control script
 # to use with Popen: split by "|" and then split beginning by " "
-start_command: tmux new -d -s Bundle|Bundle_Control
+start_command: tmux new -d -s Bundle|tmux send-keys -t Bundle "Bundle_Control" Enter
 # Command to end control script
-end_command:   tmux kill-ses -t FEU_TTM
+end_command:   tmux kill-ses -t Bundle
+
+[Presets]
+in:   0.,0.,0.
+out:  2.,2.,2.
 
 [Limits]
 # X axis limits
-min_1: 0
-max_1: 14
+min_x: 0
+max_x: 5
+# max_1: 14
 # Y axis limits
-min_2: 0
-max_2: 10.3
+min_y: 0
+max_y: 5
+# max_2: 10.3
 # Focus axis limits
-min_3: 0
-max_3: 14
+min_f: 0
+max_f: 5
+# max_3: 14
 
 [Shm_Info]
 # for each of the following, the first element is the path to the shared
@@ -40,33 +43,24 @@ max_3: 14
 #   if changing location of shms.
 
 # Shared memory to store the current position (mm)
+# pos, pos, pos (in mm)
 Pos_D:  /tmp/BUNDLE/POSD.shm,float32,1
 # Shared memory to store the target position (mm)
+# pos, pos, pos (in mm)
 Pos_P:  /tmp/BUNDLE/POSP.shm,float32,1
 # Shared memory to store the current status
-Stat_D: /tmp/BUNDLE/STATUSD.shm,int8,0
-# Shared memory to store the target status
-Stat_P: /tmp/BUNDLE/STATUSP.shm,int8,0
-# Shared memory to store any error that arises
-Error:  /tmp/BUNDLE/ERROR.shm,uint16,0
-
-# To get the size of shared memory, look here and split by ","
-[Shm_Init]
-# pos, pos, pos (in mm)
-# Nonsense values that will be overwritten
-Pos_D:  -5000.,-5000.,-5000.
-# pos, pos, pos (in mm)
-# The center of the Zabers' range
-Pos_P: 7,5.15,7
 # Status is represented in 4 bits
 #    bit 0 (LSB) = script status  (1 = alive, 0 = off)
 #    bit 1       = device status  (1 = on, 0 = off)
 #    bit 2       = anti-backlash  (1 = on, 0 = off)
 #    bit 3       = anti-sticktion (1 = on, 0 = off)
 #    bit 4       = homed          (1 = on, 0 = off)
-Stat_D: 1
+Stat_D: /tmp/BUNDLE/STATUSD.shm,int8,0
+# Shared memory to store the target status
 # Stat_P as Stat_D above.
-Stat_P: 1
-# 0 = no error // 3 = device not homed //  other error values can be found at:
-#    https://www.zaber.com/wiki/Manuals/Binary_Protocol_Manual#Error_Codes 
-Error:  0
+Stat_P: /tmp/BUNDLE/STATUSP.shm,int8,0
+# Shared memory to store any error that arises
+# 0 = no error // -1 = Device not connected // 3 = device not homed //
+#    other error values can be found at:
+#       https://www.zaber.com/wiki/Manuals/Binary_Protocol_Manual#Error_Codes 
+Error:  /tmp/BUNDLE/ERROR.shm,uint16,0
