Created Conex library that doesn't require replies

--- a/devices/Mode_Change/Mode_Change.ini
+++ b/devices/Mode_Change/Mode_Change.ini
@@ -32,30 +32,25 @@ max: 26.
 
 [Shm_Info]
 # for each of the following, the first element is the path to the shared 
-#   memory and the second is the (numpy) data type in the shared memory
+#   memory, the second is the (numpy) data type in the shared memory, and
+#   the third is whether this shm should be mmapped (1 if so)
 #
 # The directory path below is made in Mode_Change_Control, so change that file
 #   if changing location of shms.
 
 # Shared memory to store the current positiom
-Pos_D:  /tmp/Mode_Change/POSD.im.shm,float16
+#    Positive: position in mm
+#    -1 = Pupil mode // -2 = Focal mode // -3 = Zernike mode 
+Pos_D:  /tmp/Mode_Change/POSD.im.shm,float32,0
 # Shared memory to store the target position
-Pos_P:  /tmp/Mode_Change/POSP.im.shm,float16
+#     values same as above
+Pos_P:  /tmp/Mode_Change/POSP.im.shm,float32,0
 # Shared memory to store the current status
-Stat_D: /tmp/Mode_Change/STATUSD.im.shm,int8
+# Status stored in bits as followed:
+#    bit 0 (LSB): Script status (1 = on, 0 = off)
+Stat_D: /tmp/Mode_Change/STATUSD.im.shm,uint8,0
 # Shared memory to store any error that arises
-Error:  /tmp/Mode_Change/ERROR.im.shm,int8
-
-# To get the size of a shared memory, look here and split by ","
-[Shm_Init]
-# Nonsense values that will be overwritten
-Pos_D:  -5000.
-# -1 = Pupil mode // -2 = Focal mode // -3 = Zernike mode 
-Pos_P:  -1
-# 1 = all (stage & script) on // 0 = stage off
-#    -1 = script dead // -2 = all off 
-Stat_D: 1
-# 0 = None // 1 = MovementRange // 4 = MoveTimeout 
+# 0 = None // 1 = MovementRange // 4 = MoveTimeout // 5 = NPS error
 #   negative error is a controller error. For this stage, error codes are
 #   letters, so to decode multiply by -1, then add 64, then convert to ascii  
-Error:  0
+Error:  /tmp/Mode_Change/ERROR.im.shm,int8,0
