--- a/devices/Track_Cam/Track_Cam.ini
+++ b/devices/Track_Cam/Track_Cam.ini
@@ -12,14 +12,13 @@ debug_log:  /nfiudata/LOGS/FIU_TTM.log
 [Environment]
 # Command to start control script
 # to use with Popen: split by "|" and then split beginning by " "
-start_command: tmux new -d -s Track_Cam|Track_Cam_Control
+start_command: tmux new -d -s Track_Cam|export LD_LIBRARY_LIB=$LD_LIBRARY_LIB:$RELDIR/lib|Track_Cam_Control
 # Command to end control script
 end_command:   tmux kill-ses -t Track_Cam
 
-[Shm_Info]
+[Shm Info]
 # for each of the following, the first element is the path to the shared 
-#   memory, the second is the data type in the shared memory,
-#   the third is whether this shm should be mmapped
+#   memory, the second is the data type in the shared memory
 
 # Shared memory to store the current state of the Tracking Camera
 #
@@ -34,7 +33,7 @@ Stat_D: /tmp/Track_Cam/DSTAT.shm,uint8
 #
 # Error codes:
 #   0 = No error // 1 = Camera not ready // 2 = invalid parameter //
-#   3 = FLI error
+#   3 = FLI error // 4 = No camera found // 5 = No grabber found
 Error:  /tmp/Track_Cam/ERROR.shm,uint8
 
 # Shared memory to store the CRED2 image (max size is 640X512)
@@ -90,7 +89,7 @@ FPS_P:  /tmp/Track_Cam/PFPS.shm,double
 # An exposure of greater than 1/fps will be ignored. 
 Exp_P:  /tmp/Track_Cam/PEXP.shm,double
 
-# Shared memory to store the target temperature of the snake, as well as the
+# Shared memory to store the target temperature of the sensor, as well as the
 #   rate at which Temp_D is updated.
 #
 # Order is: target temp, update rate (s)
