changed format of image to signed int

--- a/devices/Track_Cam/Track_Cam.ini
+++ b/devices/Track_Cam/Track_Cam.ini
@@ -36,8 +36,8 @@ Stat_D: /tmp/Track_Cam/DSTAT.shm,uint8
 #   3 = FLI error // 4 = No camera found // 5 = No grabber found
 Error:  /tmp/Track_Cam/ERROR.shm,uint8
 
-# Shared memory to store the CRED2 image (max size is 640X512)
-IMG:    /tmp/Track_Cam/IMG.im.shm,uint16
+# Shared memory to store the raw CRED2 image (max size is 640X512)
+IMG:    /tmp/Track_Cam/RAWIMG.im.shm,int16
 
 # Shared memory to store the current cropping window of the CRED2
 #
