added dark directory to config file

--- a/devices/Track_Cam/Track_Cam.ini
+++ b/devices/Track_Cam/Track_Cam.ini
@@ -7,12 +7,16 @@
 
 [Communication]
 # Default location to store Track Cam debug file
-debug_log:  /nfiudata/LOGS/FIU_TTM.log
+debug_log:  /nfiudata/LOGS/Track_Cam.log
+
+[Data]
+# Directory to store bias images
+bias_dir: /nfiudata/darks
 
 [Environment]
 # Command to start control script
 # to use with Popen: split by "|" and then split beginning by " "
-start_command: tmux new -d -s Track_Cam|export LD_LIBRARY_LIB=$LD_LIBRARY_LIB:$RELDIR/lib|Track_Cam_Control
+start_command: tmux new -d -s Track_Cam -n Control|tmux send-keys -t Track_Cam:Control "export LD_LIBRARY_LIB=$LD_LIBRARY_LIB:$RELDIR/lib" Enter|tmux send-keys -t Track_Cam:Control "Track_Cam_Control" Enter
 # Command to end control script
 end_command:   tmux kill-ses -t Track_Cam
 
