--- a/devices/Track_Cam/Track_Cam.ini
+++ b/devices/Track_Cam/Track_Cam.ini
@@ -16,7 +16,7 @@ bias_dir: /nfiudata/darks
 [Environment]
 # Command to start control script
 # to use with Popen: split by "|" and then split beginning by " "
-start_command: tmux new -d -s Track_Cam -n Control|tmux send-keys -t Track_Cam:Control "export LD_LIBRARY_LIB=$LD_LIBRARY_LIB:$RELDIR/lib" Enter|tmux send-keys -t Track_Cam:Control "Track_Cam_Control" Enter
+start_command: tmux new -d -s Track_Cam -n Control|tmux send-keys -t Track_Cam:Control "export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$RELDIR/lib" Enter|tmux send-keys -t Track_Cam:Control "Track_Cam_Control" Enter
 # Command to end control script
 end_command:   tmux kill-ses -t Track_Cam
 
