changed all img shms to be mmapped

--- a/processing/Track_Cam_process/Track_Cam_process.ini
+++ b/processing/Track_Cam_process/Track_Cam_process.ini
@@ -64,18 +64,18 @@ Set:     /tmp/Track_Cam/PROCSTAT.shm,uint8,0
 
 # Shared memory to store the reference image 
 #   to be subtracted (subtraction determined by Stat)
-Ref:     /tmp/Track_Cam/PROCREF.shm,int16,0
+Ref:     /tmp/Track_Cam/PROCREF.shm,int16,1
 
 # Shared memory to store the current background image
 #   to be subtracted (subtraction determined by Stat)
-Bkgrd:   /tmp/Track_Cam/PROCBKGRD.shm,int16,0
+Bkgrd:   /tmp/Track_Cam/PROCBKGRD.shm,int16,1
 
 # Shared memory to store the current dark to be 
 #   subtracted (subtraction determined by Stat)
-Bias:    /tmp/Track_Cam/PROCBIAS.shm,int16,0
+Bias:    /tmp/Track_Cam/PROCBIAS.shm,int16,1
 
 # Shared memory for the processed image
-Proc:    /tmp/Track_Cam/PROCIMG.shm,int16,0
+Proc:    /tmp/Track_Cam/PROCIMG.im.shm,int16,1
 
 # Shared memory to store any errors
 #
