added sub directories to makefile

--- a/devices/support/Makefile
+++ b/devices/support/Makefile
@@ -8,6 +8,9 @@ RELINC = KPIC_shmlib.hpp
 RELLIB = libKPIC_shmlib.so
 RELBIN = linksem
 
+# add subdirectory
+DIRS = Python
+
 ################################################################################
 # KROOT boilerplate:
 # Include general make rules, using default values for the key environment
