--- a/processing/Makefile
+++ b/processing/Makefile
@@ -1,16 +1,16 @@
 
 # NIRSPEC fiber injection unit. Build tracking camera
 
-override SYSNAM = kss/nirspec/nsfiu/processing/Track_Cam_process
+override SYSNAM = kss/nirspec/nsfiu/processing/
 override VERNUM = 1.0
 
 override ENABLE_PYTHON2 = False
 
 RELLIB = Track_Cam_process.py
-RELBIN = Track_Cam_process_Control
-RELDAT = Track_Cam_process.ini 
 LIBSUB = python
 
+# include sub directories
+DIRS = TC_Base TC_Vis
 
 ################################################################################
 # KROOT boilerplate:
@@ -39,7 +39,3 @@ endif
 ################################################################################
 include $(RELDIR)/etc/rules.mk
 ################################################################################
-
-# requires libpng12.x86_64
-Track_Cam_Control: Track_Cam_Control.cpp KPIC_Cam_Observer.cpp
-	$(CC) -o Track_Cam_Control Track_Cam_Control.cpp KPIC_Cam_Observer.cpp -lpthread -L$(FLISDK_DIR)/lib/release -lFliSdk -I$(FLISDK_DIR)/include -I$(RELDIR)/include -L$(RELDIR)/lib -lKPIC_shmlib -std=c++11 -lstdc++
