--- a/processing/TC_Vis/Track_Cam_vis_process.ini
+++ b/processing/TC_Vis/Track_Cam_vis_process.ini
@@ -6,14 +6,14 @@
 
 [Communication]
 # Default location to store Track Cam process debug file
-debug_log:  /nfiudata/LOGS/Track_Cam_process.log
+debug_log:  /nfiudata/LOGS/Track_Cam_vis_process.log
 
 [Environment]
 # Command to start control script
 # to use with Popen: split by "|" and then split beginning by " "
-start_command: tmux new-window -t Track_Cam -n processing|tmux send-keys -t Track_Cam:processing "Track_Cam_process_Control" Enter
+start_command: tmux new-window -t Track_Cam:2 -n vis_proc|tmux send-keys -t Track_Cam:vis_proc "Track_Cam_vis_process_Control" Enter
 # Command to end control script
-end_command:   tmux kill-window -t Track_Cam:processing
+end_command:   tmux kill-window -t Track_Cam:vis_proc
 
 [Shm Info]
 # for each of the following, the first element is the path to the shared 
@@ -26,60 +26,57 @@ end_command:   tmux kill-window -t Track_Cam:processing
 #   0 : no scale
 #   1 : log scale
 #   2 : square root scale
-Scale:   /tmp/Track_Cam/PROCSCALE.shm,uint8,0
+Scale:   /tmp/Vis_Process/PROCSCALE.shm,uint8,0
 
 # Shared memory to store the current pixel range
 #
 # Values are as follows
 #   index 0 : min pixel value
 #         1 : max pixel value
-DRng:    /tmp/Track_Cam/PROCDRNG.shm,int16,0
-
-# Shared memory to store desired pixel ranges
-#
-# Values are as follows:
-#   index 0 : use custom min (1 = use custom, 0 = use min value)
-#         1 : custom min value
-#         2 : use custom max (1 = use custom, 0 = use max value)
-#         3 : custom max value
-PRng:    /tmp/Track_Cam/PROCPRNG.shm,int16,0
+DRng:    /tmp/Vis_Process/PROCDRNG.shm,int16,0
 
 # Shared memory to store how many frames to use in
 #   the rolling average
-Avg_cnt: /tmp/Track_Cam/PROCAVG.shm,uint8,0
+Avg_cnt: /tmp/Vis_Process/PROCAVG.shm,uint8,0
 
 # Shared memory to store some basic settings
 #
-# NOTE: care should be taken to not double subtract
-#   the bias. Make sure either the background is formed from
-#   processed images, or that the bias bit and background bit
-#   are not both on.
+# NOTE: bit 2 is ignored if bit 1 is 1 and base processing 
+#           is using medfilt
+#       bit 3 is ignored if bit 1 is 1
+#       bit 4 is ignored if bit 1 is 1 and calib is being
+#           used by base processing script
+#       if more than one of bits 3, 4, 5 are 1, only the largest
+#           bit is repected
 #
 # Values are as follows:
 #   bit 0 (LSB): process status         (1 = processing, 0 = not)
-#   bit 1      : bias subtraction       (1 = subtracting, 0 = not)
-#   bit 2      : background subtraction (1 = subtracting, 0 = not)
-#   bit 3      : reference subtraction  (1 = subtracting, 0 = not)
-Set:     /tmp/Track_Cam/PROCSTAT.shm,uint8,0
+#       1      : base processing        (1 = use base proc, 0 = use raw img)
+#       2      : median filter          (1 = on, 0 = off)
+#       3      : bias subtraction       (1 = subtracting, 0 = not)
+#       4      : background subtraction (1 = subtracting, 0 = not)
+#       5      : reference subtraction  (1 = subtracting, 0 = not)
+Stat:     /tmp/Vis_Process/PROCSTAT.shm,uint8,0
 
 # Shared memory to store the reference image 
 #   to be subtracted (subtraction determined by Stat)
-Ref:     /tmp/Track_Cam/PROCREF.shm,int16,0
+#
+#   NOTE: should be a raw frame
+Ref:     /tmp/Vis_Process/PROCREF.shm,int16,0
 
 # Shared memory to store the current background image
 #   to be subtracted (subtraction determined by Stat)
-Bkgrd:   /tmp/Track_Cam/PROCBKGRD.shm,int16,0
-
-# Shared memory to store the current dark to be 
-#   subtracted (subtraction determined by Stat)
-Bias:    /tmp/Track_Cam/PROCBIAS.shm,int16,0
+#
+#   NOTE: background should be a raw frame
+Bkgrd:   /tmp/Vis_Process/PROCBKGRD.shm,int16,0
 
 # Shared memory for the processed image
-Proc:    /tmp/Track_Cam/PROCIMG.im.shm,int16,1
+Proc:    /tmp/Vis_Process/PROCIMG.im.shm,int16,1
 
 # Shared memory to store any errors
 #
 # Error values are as follows:
 #   0 = None // 1 = Bias shape wrong // 2 = Background shape wrong
-#   3 = Reference shape wrong
-Error:   /tmp/Track_Cam/PROCERR.shm,uint8,0
+#   3 = Reference shape wrong // 4 = Base processing error
+#   5 = bad pixel map error
+Error:   /tmp/Vis_Process/PROCERR.shm,uint8,0
