not extensively tested stable version

--- a/processing/TC_Vis/Track_Cam_vis_process.ini
+++ b/processing/TC_Vis/Track_Cam_vis_process.ini
@@ -78,5 +78,5 @@ Proc:    /tmp/Vis_Process/PROCIMG.im.shm,int16,1
 # Error values are as follows:
 #   0 = None // 1 = Bias shape wrong // 2 = Background shape wrong
 #   3 = Reference shape wrong // 4 = Base processing error
-#   5 = bad pixel map error
+#   5 = bad pixel map error // 6 = camera not connected
 Error:   /tmp/Vis_Process/PROCERR.shm,uint8,0
