seemingly stable GUI with save functions

--- a/processing/TC_Base/Track_Cam_base_process.ini
+++ b/processing/TC_Base/Track_Cam_base_process.ini
@@ -42,5 +42,5 @@ Base_proc:    /tmp/Base_Process/PROC.im.shm,int16,1
 #
 # Error values are as follows:
 #   0 = None // 1 = bias error // 2 = calibration image error //
-#   3 = bad pixel map error
+#   3 = bad pixel map error // 4 = camera error
 Error:   /tmp/Base_Process/ERR.shm,uint8,0
