--- a/processing/TC_Vis/Track_Cam_vis_process.ini
+++ b/processing/TC_Vis/Track_Cam_vis_process.ini
@@ -28,13 +28,6 @@ end_command:   tmux kill-window -t Track_Cam:vis_proc
 #   2 : square root scale
 Scale:   /tmp/Vis_Process/PROCSCALE.shm,uint8,0
 
-# Shared memory to store the current pixel range
-#
-# Values are as follows
-#   index 0 : min pixel value
-#         1 : max pixel value
-DRng:    /tmp/Vis_Process/PROCDRNG.shm,int16,0
-
 # Shared memory to store how many frames to use in
 #   the rolling average
 Avg_cnt: /tmp/Vis_Process/PROCAVG.shm,uint8,0
@@ -76,7 +69,7 @@ Proc:    /tmp/Vis_Process/PROCIMG.im.shm,int16,1
 # Shared memory to store any errors
 #
 # Error values are as follows:
-#   0 = None // 1 = Bias shape wrong // 2 = Background shape wrong
+#   0 = None // 1 = Bias Error // 2 = Background shape wrong
 #   3 = Reference shape wrong // 4 = Base processing error
 #   5 = bad pixel map error // 6 = camera not connected
 Error:   /tmp/Vis_Process/PROCERR.shm,uint8,0
