--- a/devices/NPS/pulizzi/NPS.ini
+++ b/devices/NPS/pulizzi/NPS.ini
@@ -2,6 +2,18 @@
 # NPS Configuration File
 #
 
+##### ignore this section -- for TC upgrade #####
+[Port Info]
+1: CRED2
+2: ---
+3: ---
+4: ---
+5: ---
+6: ---
+7: ---
+8: ---
+#################################################
+
 [Device_Info]
 computer:   NFIU
 model:      IPC34XX
