--- a/Keywords/config/stdiosvc.conf
+++ b/Keywords/config/stdiosvc.conf
@@ -12,22 +12,22 @@
 # Don't exit on signals. Rely instead on the
 # closing of the input/output sockets.
 
-#-ignore
-#	sigint,sigterm
+-ignore
+	sigint,sigterm
 
 
 # Logging options.
 
-#-logfac
-#	key:<<svc>>_log
+-logfac
+	key:<<svc>>_log
 
-#-autolog
-#	modify
-#	*
+-autolog
+	modify
+	*
 
-#-autolog
-#	modifydone
-#	*
+-autolog
+	modifydone
+	*
 
 # -logio
 
@@ -53,13 +53,13 @@
 
 # Error and message keywords.
 
-#-errkey
-#	*
-#	DISPERR
+-errkey
+	*
+	DISPERR
 
-#-msgkey
-#	*
-#	DISPMSG
+-msgkey
+	*
+	DISPMSG
 
 
 # Heartbeat keyword, handled entirely by stdiosvc.
@@ -74,6 +74,6 @@
 # value of zero, it does not get broadcast by stdiosvc unless the -bcwrite
 # flag is set for that keyword.
 
-#-bcwrite
-#	*STOP
-#	true
+-bcwrite
+	*STOP
+	true
