--- a/processing/TC_Vis/Track_Cam_vis_process.ini
+++ b/processing/TC_Vis/Track_Cam_vis_process.ini
@@ -9,11 +9,10 @@
 debug_log:  /nfiudata/LOGS/Track_Cam_vis_process.log
 
 [Environment]
-# Command to start control script
-# to use with Popen: split by "|" and then split beginning by " "
-start_command: tmux new-window -t Track_Cam:2 -n vis_proc|tmux send-keys -t Track_Cam:vis_proc "Track_Cam_vis_process_Control" Enter
-# Command to end control script
-end_command:   tmux kill-window -t Track_Cam:vis_proc
+# info about tmux sessions for processes to live in
+session: Processing
+window:  Visualizer
+ctrl_s:  Track_Cam_vis_process_Control
 
 [Shm Info]
 # for each of the following, the first element is the path to the shared 
@@ -34,21 +33,21 @@ Avg_cnt: /tmp/Vis_Process/PROCAVG.shm,uint8,0
 
 # Shared memory to store some basic settings
 #
-# NOTE: bit 2 is ignored if bit 1 is 1 and base processing 
+# NOTE: bit 2 is ignored if bit 1 is 1 and track processing 
 #           is using medfilt
 #       bit 3 is ignored if bit 1 is 1
 #       bit 4 is ignored if bit 1 is 1 and calib is being
-#           used by base processing script
+#           used by track processing script
 #       if more than one of bits 3, 4, 5 are 1, only the largest
 #           bit is repected
 #
 # Values are as follows:
-#   bit 0 (LSB): process status         (1 = processing, 0 = not)
-#       1      : base processing        (1 = use base proc, 0 = use raw img)
-#       2      : median filter          (1 = on, 0 = off)
-#       3      : bias subtraction       (1 = subtracting, 0 = not)
-#       4      : background subtraction (1 = subtracting, 0 = not)
-#       5      : reference subtraction  (1 = subtracting, 0 = not)
+#   bit 0 (LSB): process status             (1 = processing, 0 = not)
+#       1      : tracking processing        (1 = use tracking proc, 0 = use raw img)
+#       2      : median filter              (1 = on, 0 = off)
+#       3      : bias subtraction           (1 = subtracting, 0 = not)
+#       4      : background subtraction     (1 = subtracting, 0 = not)
+#       5      : reference subtraction      (1 = subtracting, 0 = not)
 Stat:     /tmp/Vis_Process/PROCSTAT.shm,uint8,0
 
 # Shared memory to store the reference image 
@@ -70,6 +69,6 @@ Proc:    /tmp/Vis_Process/PROCIMG.im.shm,int16,1
 #
 # Error values are as follows:
 #   0 = None // 1 = Bias Error // 2 = Background shape wrong
-#   3 = Reference shape wrong // 4 = Base processing error
+#   3 = Reference shape wrong // 4 = Track processing error
 #   5 = bad pixel map error // 6 = camera not connected
 Error:   /tmp/Vis_Process/PROCERR.shm,uint8,0
