--- a/processing/TC_Track/Track_Cam_tracking_process.ini
+++ b/processing/TC_Track/Track_Cam_tracking_process.ini
@@ -6,19 +6,18 @@
 
 [Communication]
 # Default location to store Track Cam process debug file
-debug_log:  /nfiudata/LOGS/Track_Cam_base_process.log
+debug_log:  /nfiudata/LOGS/Track_Cam_tracking_process.log
 
 [Environment]
-# Command to start control script
-# to use with Popen: split by "|" and then split beginning by " "
-start_command: tmux new-window -t Track_Cam:1 -n base_proc|tmux send-keys -t Track_Cam:base_proc "Track_Cam_base_process_Control" Enter
-# Command to end control script
-end_command:   tmux kill-window -t Track_Cam:base_proc
+# info about tmux sessions for processes to live in
+session: Processing
+window:  Tracking
+ctrl_s:  Track_Cam_tracking_process_Control
 
 [Shm Info]
 # Shared memory to store how many frames to use in
 #   the rolling average
-Avg_cnt: /tmp/Base_Process/AVG.shm,uint8,0
+Avg_cnt: /tmp/Track_Process/AVG.shm,uint8,0
 
 # Shared memory to store some basic settings
 #
@@ -26,21 +25,21 @@ Avg_cnt: /tmp/Base_Process/AVG.shm,uint8,0
 #   bit 0 (LSB): process status          (1 = processing, 0 = not)
 #       1      : calibration subtraction (1 = subtract, 0 = don't)
 #       2      : median filter           (1 = on, 0 = off)
-Stat:     /tmp/Base_Process/STAT.shm,uint8,0
+Stat:     /tmp/Track_Process/STAT.shm,uint8,0
 
 # Shared memory to store the reference image 
 #   to be subtracted (subtraction determined by Stat)
 #
 #   NOTE: first pixel should be 0 if this is a raw frame,
 #       anything else if it includes a bias
-Calib:     /tmp/Base_Process/CAL.shm,int16,0
+Calib:     /tmp/Track_Process/CAL.shm,int16,0
 
 # Shared memory for the processed image
-Base_proc:    /tmp/Base_Process/PROC.im.shm,int16,1
+Track_proc:    /tmp/Track_Process/PROC.im.shm,int16,1
 
 # Shared memory to store any errors
 #
 # Error values are as follows:
 #   0 = None // 1 = bias error // 2 = calibration image error //
 #   3 = bad pixel map error // 4 = camera error
-Error:   /tmp/Base_Process/ERR.shm,uint8,0
+Error:   /tmp/Track_Process/ERR.shm,uint8,0
