took presets out of control script

--- a/devices/Mode_Change/Mode_Change.ini
+++ b/devices/Mode_Change/Mode_Change.ini
@@ -38,12 +38,10 @@ max: 26.
 # The directory path below is made in Mode_Change_Control, so change that file
 #   if changing location of shms.
 
-# Shared memory to store the current positiom
-#    Positive: position in mm
-#    -1 = Pupil mode // -2 = Focal mode // -3 = Zernike mode 
+# Shared memory to store the current position
+#   (target in mm)
 Pos_D:  /tmp/Mode_Change/POSD.im.shm,float32,0
 # Shared memory to store the target position
-#     values same as above
 Pos_P:  /tmp/Mode_Change/POSP.im.shm,float32,0
 # Shared memory to store the current status
 # Status stored in bits as followed:
