--- a/devices/Mode_Change/Mode_Change.ini
+++ b/devices/Mode_Change/Mode_Change.ini
@@ -10,11 +10,10 @@
 debug_log:  /nfiudata/LOGS/Mode_change.log
 
 [Environment]
-# Command to start control script
-# to use with Popen: split by "|" and then split beginning by " "
-start_command: tmux new -d -s Mode_Change|Mode_Change_Control
-# Command to end control script
-end_command:   tmux kill-ses -t Mode_Change
+# info about tmux sessions for processes to live in
+session: devices
+window:  Mode_Change
+ctrl_s:  Mode_Change_Control
 
 [Presets]
 # position for Pupil viewing mode
