--- a/devices/Mode_Change/Mode_Change.ini
+++ b/devices/Mode_Change/Mode_Change.ini
@@ -13,7 +13,7 @@ debug_log:  /nfiudata/LOGS/Mode_change.log
 # info about tmux sessions for processes to live in
 session: devices
 window:  Mode_Change
-ctrl_s:  Mode_Change_Control
+ctrl_s:  Mode_Change_Control_No_Reply
 
 [Presets]
 # position for Pupil viewing mode
