added ip since centos8 doesn't see host list

--- a/devices/NPS/pulizzi/NPS.ini
+++ b/devices/NPS/pulizzi/NPS.ini
@@ -19,7 +19,7 @@ computer:   NFIU
 model:      IPC34XX
 
 [Communication]
-address:    k2consoles-8
+address:    192.168.108.54
 port:       2004
 
 [Environment]
