changed to match summit system more

--- a/devices/Mode_Change/Phase_II/Mode_Change.ini
+++ b/devices/Mode_Change/Phase_II/Mode_Change.ini
@@ -18,8 +18,8 @@ start_command: tmux new -d -s Mode_Change|tmux send-keys -t Mode_Change "Mode_Ch
 end_command:   tmux kill-ses -t Mode_Change
 
 [Presets]
-in: 0
-out: 27
+Focal: .27
+Pupil: 25.3
 
 [Limits]
 # Axis 1 lower limit
