changed to cleaner tmux management

--- a/devices/TCP/TCP.ini
+++ b/devices/TCP/TCP.ini
@@ -11,11 +11,10 @@
 debug_log:  /nfiudata/LOGS/TCP.log
 
 [Environment]
-# Command to start control script
-# to use with Popen: split by "|" and then split by " "
-start_command: tmux new -d -s TCP|tmux send-keys -t TCP "TCP_Control" Enter
-# Command to end control script
-end_command:   tmux kill-ses -t TCP
+# info about tmux sessions for processes to live in
+session: Devices
+window:  TCP
+ctrl_s:  TCP_Control
 
 [Presets]
 mir_1:   26.
