--- a/devices/Mode_Change/Mode_Change.ini
+++ b/devices/Mode_Change/Mode_Change.ini
@@ -11,7 +11,7 @@ debug_log:  /nfiudata/LOGS/Mode_change.log
 
 [Environment]
 # info about tmux sessions for processes to live in
-session: devices
+session: Devices
 window:  Mode_Change
 ctrl_s:  Mode_Change_Control_No_Reply
 
