--- a/devices/Track_Cam/Track_Cam.ini
+++ b/devices/Track_Cam/Track_Cam.ini
@@ -14,11 +14,10 @@ debug_log:  /nfiudata/LOGS/Track_Cam.log
 bias_dir: /nfiudata/darks
 
 [Environment]
-# Command to start control script
-# to use with Popen: split by "|" and then split beginning by " "
-start_command: tmux new -d -s Track_Cam -n Control|tmux send-keys -t Track_Cam:Control "export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$RELDIR/lib" Enter|tmux send-keys -t Track_Cam:Control "Track_Cam_Control" Enter
-# Command to end control script
-end_command:   tmux kill-ses -t Track_Cam
+# info about tmux sessions for processes to live in
+session: Devices
+window:  Track_Cam
+ctrl_s:  Track_Cam_Control
 
 [Shm Info]
 # for each of the following, the first element is the path to the shared 
